[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Scenes/GUI/GameOverScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/images/game_over.png" type="Texture" id=3]
[ext_resource path="res://assets/sfx/event2.ogg" type="AudioStream" id=4]

[node name="GameOverScreen" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeRect" type="ColorRect" parent="."]
visible = false
self_modulate = Color( 0, 0, 0, 0 )
rect_min_size = Vector2( 1280, 720 )
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="TextureRect" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0 )
light_mask = 0
margin_right = 1280.0
margin_bottom = 720.0
rect_min_size = Vector2( 1280, 720 )
texture = ExtResource( 3 )
stretch_mode = 6

[node name="FadeTween" type="Tween" parent="."]

[node name="TextTween" type="Tween" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -5.0
pitch_scale = 0.4
[connection signal="tween_all_completed" from="FadeTween" to="." method="_on_FadeTween_tween_all_completed"]
